Add comments to help prevent GSMTAP incompatibilities
This issue was migrated from bug 6442 in our old bug tracker.
Original bug information:
Reporter: Harald Welte
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: Other
Version: Git
Attachments:
0001-GSMTAP-Add-warnings-to-ensure-no-incompatible-change.patch: patch to add some warnings to packet-gsmtap.c
0001-GSMTAP-Use-official-gsmtap.h-header-file-instead-of-.patch: import gsmtap.h from libosmocore rather than definitions in packet-gsmtap.c