From Harald Welte: In order to ensure one consistent GSMTAP definition, some comments are added to the code in order to make sure modifications are first merged in the GSMTAP mainline header file, and then propagated to wireshark.

https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=6442

svn path=/trunk/; revision=39366